[package]
name = "yttria-modulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "yttria_modulation"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.3"
yttria-math = { path = "../yttria-math" }
yttria-coding = { path = "../yttria-coding" }
rayon = "1.10.0"

[dev-dependencies]
plotly = "0.8.4"
